--- a/project1/templates/home.html
+++ b/project1/templates/home.html
@@ -38,7 +38,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Welcome to My Home Page</h1>
+        <h1>Welcome to My Course Home Page {{clist}}</h1>
       </header>
       <main>
         <p>This is a simple example of a homepage.</p>
