--- a/project1/templates/home.html
+++ b/project1/templates/home.html
@@ -36,9 +36,18 @@
     </style>
   </head>
   <body>
+    <!-- Using Django Template For Loop --> 
+    {% for n in clist %}
+    <div> {{forloop.counter }}{{n}} </div>
+        {% endfor %}
+        <table>
+          <tr>
+            
+          </tr>
+        </table>
     <div class="container">
       <header>
-        <h1>Welcome to My Course Home Page {{clist}}</h1>
+        <h1>Welcome to My Course Home Page  {{clist}}</h1>
       </header>
       <main>
         <p>This is a simple example of a homepage.</p>
@@ -48,5 +57,6 @@
         <p>&copy; 2024 Your Name</p>
       </footer>
     </div>
+    
   </body>
 </html>
