--- a/project1/templates/index_For_Loop.html
+++ b/project1/templates/index_For_Loop.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>For Loop</title>
-</head>
-<body>
-
+  </head>
+  <body>
     {% for n in clist %}
     <div>{{forloop.counter}}{{n}}</div>
     {% endfor %}
 
-    <br>
+    <br />
 
-    <table border="1" cellpading="50">
-        <tr>
-            <th>Name</th>
-            <th>Phone Number</th>
-        </tr>
-        {% for d in student_details%}
-        <tr>
-            <td>  </td>
-            <td>  </td>
-        </tr>
-        {% endfor%}
-
+    <table border="1" cellpadding="10">
+      <tr>
+        <th>Name</th>
+        <th>Phone Number</th>
+      </tr>
+      {% for d in student_details%}
+      <tr>
+        <td>{{d.name}}</td>
+        <td>{{d.phone}}</td>
+      </tr>
+      {% endfor%}
     </table>
-
-</body>
+  </body>
 </html>
